# credit-risk-modeling-on-aws

./: .gitignore  README.md  pyproject.toml
batch_scoring/local/: Dockerfile  Makefile  PIPELINE_APPROACH.md  README.md  TESTING.md  deploy_stack.py  docker-compose.yml  localstack-config.toml  plot_score_distribution.py  requirements.txt  sagemaker_pipeline.py  sagemaker_train.py  train_catboost.py
batch_scoring/local/cloudformation/: infrastructure.yml
batch_scoring/local/lambda_functions/: evaluate_limit_increase.py  query_batch_scores.py  sagemaker_inference.py  update_database.py
batch_scoring/local/scripts/: check_results.py  evaluate_processing.py  inference_processing.py  query_batch_scores_processing.py  run_workflow.py  setup_database.py  (+4 more)
mlflow_on_aws/: .env.bak  Dockerfile.mlflow  Dockerfile.train  Makefile  README.md  docker-compose.yml  samconfig.toml  template.yaml  train_sagemaker.py
mlflow_on_aws/iam-policies/: mlflow-tracking-server-policy.json  sagemaker-mlflow-policy.json
mlflow_on_aws/scripts/: setup-minio.sh
mlflow_on_aws/training/: train.py
real_time_scoring/: Makefile  README.md  check_approvals.py  deploy_stack.py  docker-compose.yml  inference_scorecard.py  requirements.txt  sagemaker_train.py  train_scorecard.py
real_time_scoring/cloudformation/: infrastructure.yml
real_time_scoring/local/: Dockerfile  Makefile  README.md  check_approvals.py  deploy_stack.py  docker-compose.yml  localstack-config.toml  package_lambda.py  plot_score_distribution.py  requirements.txt  sagemaker_train.py
real_time_scoring/training/: train.py
(+17 files in other folders)
